unpackaged/main/default/objects/Legal_Response__c/Legal_Response__c.object-meta.xml
<CustomObject>
    <label>Legal Response</label>
    <nameField>
        <displayFormat>Response-{00000}</displayFormat>
        <label>Legal Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>