unpackaged/main/default/objects/Legal_Response__c/fields/Legal_Contract_Form__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contract_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Contract Form</label>
    <referenceTo>Legal_Contract_Form__c</referenceTo>
    <relationshipLabel>Legal Responses</relationshipLabel>
    <relationshipName>Legal_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>