unpackaged/main/default/objects/Legal_Response__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Question Order</description>
    <formula>Application_Question__r.Order__c</formula>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>